[391] Fix cell overflow on Firefox in Planning component (#436)

--- a/src/css/themes/planning.styl
+++ b/src/css/themes/planning.styl
@@ -6,7 +6,7 @@
   &-container
     height: 100%;
     position: relative;
-    width: -webkit-fill-available;
+    width: stretch;
   &-title
     font-size: 0.875rem
     font-weight: 600
